<resources>
    <string name="app_name">锦绣太原城</string>
    <string name="app_favourite">我的收藏</string>
    <string name="app_shake_i_like">摇晃手机，有惊喜哦！</string>
    <string name="start_t1">给您一个真实有趣的太原！</string>
    <string name="start_t2">龙城太原：太原全貌一览无余!</string>
    <string name="start_t3">玩在太原：所有好玩一网打尽!</string>
    <string name="start_t4">学在太原：各大高校尽在掌控!</string>
    <string name="start_t5">摇我喜欢，摇出一个多彩太原！</string>
    <string name="start_btn">开启锦绣太原之旅</string>
    <string name="my_favourite_default">暂时没有记录</string>
    <string name="my_favourite_default_content">赶快去收藏喜欢的内容吧！</string>
    <string name="db_my_favourite_add">亲，收藏成功！点击菜单可查看“我的收藏”</string>
    <string name="db_my_favourite_delete">取消收藏成功！</string>
    <string name="db_my_favourite_tip">已经收藏过了！点击菜单可查看。</string>
    <string name="menu_my_favourite">我的收藏</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_back">返回</string>
    <string name="menu_my_favourite_context_title">选择操作</string>
    <string name="menu_my_favourite_context_no">取消收藏</string>
    <string name="mian_lcty">龙城太原</string>
    <string name="mian_wzty">玩在太原</string>
    <string name="mian_xzty">学在太原</string>
    <string name="lcty_1">锦绣太原城</string>
    <string name="lcty_2">龙城来源</string>
    <string name="lcty_3">太原历史</string>
    <string name="lcty_4">现今太原</string>
    <string name="lcty_5">太原地理</string>
    <string name="lcty_6">太原经济</string>
    <string name="lcty_7">太原特产</string>
    <string name="lcty_8">太原小吃</string>
    <string name="lcty_9">太原地图</string>
    <string name="lcty_10">太原天气</string>
    <string name="lcty_11">更多介绍...</string>
    <string name="lcty_text_1">太原，山西省会，简称并，别称并州，古称晋阳，也称“龙城”。濒临汾河，三面环山，自古就有“锦绣太原城”的美誉。是一座具有2500多年建城历史的古都，“控带山河，踞天下之肩背”，“襟四塞之要冲，控五原之都邑”的历史古城，是山西省的省会，政治，经济，文化中心。濒临汾河，三面环山，自古就有“锦绣太原城”的美誉。歌曲《人说山西好风光》，便是为了突出山西，尤其是其省会太原的秀美。全省政治、经济、文化、教育、科技、交通、信息中心，是以冶金、机械、化工、煤炭为出桂支柱，以输出能源、原材料、矿山机械产品为主要特征的中国重要的能源重化工城市，是中国北方最著名的历史名城之一。</string>
    <string name="lcty_text_2">中国把皇帝称为真龙天子，有2500年历史的太原是因为出了多个皇帝被称为龙城。
宋代封建王朝把晋阳叫做“龙城”，他们认为系舟山为“龙角”，龙山、天龙山为“龙尾”，晋阳正当蟠龙的中心，故常有“真龙天子”的出现：北齐的高欢、唐代的李渊、后唐的李存勖、后晋的石敬瑭、后汉的刘知远，都是从晋阳起家夺取天下的。赵宋王朝怕再有人起来与他们争天下，于太平兴国四年(979)五月十八日放火焚烧了晋阳城，次年四月又引汾水、晋水灌了晋阳城的废墟。
唐王朝发祥于晋阳，唐初先后封其为“北都”“北京”与京都长安、东都洛阳并称“三都”。五代十国时的后唐后晋后汉等都以晋阳为都，因此太原素有龙城之别称!太原历史上出的皇帝数不胜数。
赵简子，赵襄子以太原为基地成就战国七雄。汉文帝刘恒八岁来到太原成为晋王，16年后即位， 开创文景之治，成就西汉盛世北齐高欢、高洋父子以晋阳为基地，建立北齐。隋炀帝杨广即位也为晋王。
武则天为并州文水人。五代十国，李存勖、石敬瑭、刘知远和刘崇兄弟凭借晋阳争夺天下，走马称帝分别建立了后唐、后晋、后汉、北汉。正是因为这些，所以太原才被称为：“龙城”。</string>
    <string name="lcty_text_3">史传太原的肇始者台骀，因治理汾水、开拓了太原盆地，被尊为“汾水之神”。史载唐尧初都太原并建唐城，清徐县尧城村现存有元代建筑尧庙，就是对尧的纪念。
夏商时期，太原地区是土方、鬼方、严狁等戎狄部族游牧的地方，甲骨卜辞和先秦文献中均载有这些民族的名字。唐地原在晋南翼城一带。“叔虞封唐”的故事在山西广为流传，太原又是山西的中心，因而历史上就把纪念唐叔虞的晋祠建在太原古晋阳城西门外。叔虞之子燮父，改唐国为晋国。公元前 497年，执掌晋国之政的公卿赵简子，在晋水之阳创建了军事地理位置十分优越的晋阳城，太原始有“晋阳”之称，距今已有2500余年。
公元前247年，秦将蒙骜灭赵国，设置太原郡，治所在晋阳。秦统一全国后，太原郡为36郡之一。汉初，匈奴不断南下扩张势力。为了巩固北边，前196年，汉高祖并雁门郡、云中郡、代郡和太原郡为
代国，封四子刘恒为代王，都晋阳。刘恒治代17年，轻徭薄赋，肃整疆防，后临帝位，是为汉文帝，并与其子景帝共创“文景之治”。前 106年，汉武帝首创13个州刺史部建置，并州刺史部驻节晋阳，晋阳、太原、并州一地三名自此始。
1213年，兴起的蒙古兵分三路南下，围绕太原城得失，经反复拉锯，最后太原被蒙古军占领。明初，朱元璋为防御蒙古入侵，沿长城一线先后设置了9个军事重镇，史称“九边”，太原即为“九边”之一。明太祖封第三子朱棡为晋恭王，并遣朱岳父谢成扩建太原城。此次扩建，在太原旧城的基础上，向南、北、东三面进行大规模扩建，形成 8门、4角楼、12座城楼的“锦绣太原城”。
1911年10月10日，武昌起义打响了终结帝制的第一枪。10月29日，山西革命党人在太原起义成功，推举 28岁的阎锡山为都督，建立了山西军政府。承恩门由此又称为首义门。太原是辛亥革命中继武昌、长沙、西安、南昌后第五座举行革命武装起义的城市。</string>
    <string name="lcty_text_4">太原现辖 6区（小店区、迎泽区、杏花岭区、尖草坪区、万柏林区、晋源区）、 3县（清徐县、阳曲县、娄烦县）、1市（古交市）和2个国家级开发区（太原市经济技术开发区、太原市高新技术开发区）、 2个省级开发区（太原工业园区、太原不锈钢生态工业园区）。全市共有 51个街道办事处，461个社区居委会，有21个镇、33个乡，1013个村委会， 1632个自然村。
太原是中国建国初期的重要工业基地之一。“一五”时期，太原为中国的经济建设作出了巨大贡献，当时与北京、天津同为华北地区“工业重镇”。20世纪末以来，在全省新型能源和工业基地建设中，太原坚持走新型工业化道路，承担起全省产业结构调整和升级转化“领头羊”的重任。以不锈钢生产基地、新型装备制造工业基地和镁铝合金加工制造基地“三大基地”为代表的优势产业发展态势良好。经过50多年的建设，已形成了以能源、冶金、机械、化工为支柱，纺织、轻工、医药、电子、食品、建材精密仪器等门类较齐全的工业体系，加之科研机构和大专院校集中及商业物资供应中心的优势，国民经济实现了快速、协调、健康发展。
太原城郊型农村经济发展迅速，农业生产不断向高产、优质、高效方向转化。近年来，太原农业产业化经营取得突破，一批龙头企业不断发展壮大，新农村建设起步良好，农村经济呈现全面发展的良好态势。 2006年，全市农村经济总收入455亿元；乡镇企业总产值 73822亿元。“十一五”乃至更长的时期，太原要统筹城乡发展，扎实推进社会主义新农村建设，大力发展现代农业，特别是生态高效绿色农业，进一步优化农业布局，转变农业增长方式，提高农业产业化水平，努力构建以都市现代农业为基础、绿色工业为主导、特色城镇为支撑的农村经济发展新格局。
太原市教育：全市现有高等院校32所，在校学生262756人；中等专业学校31所，在校学生90960人；技工学校（包括技工部） 54所，在校学生31951人；普通中学247所，在校学生225768人；职业中学 22所，在校学生15457人；小学947所，在校学生316665人；幼儿园814所，在园儿童 83085人。全市现有科学研究与开发机构305个，工作 人员144万人，每年研究与开发项目（课题） 4000多项，完成科技著作近300种，发表科学（学术）论文达万余篇。</string>
    <string name="lcty_text_5">概观：
太原位于山西省境中央，太原盆地的北端，于华北地区猪河流域中部，西、北、东三面环山，中、南部为河谷平原，全市整个地形北高南低呈簸箕形。地处南北同蒲和石太铁路线的交汇处。平均海拔约800米，地理坐标为东经111°30′～113°09′，北纬37°27′～38°25′。区域轮廓呈蝙蝠形，东西横距约144公里，南北纵约107公里。
气候：
太原属温带温带季风气候，冬无严寒，夏无酷暑，昼夜温差较大，无霜期较长，日照充足。年平均降雨量456毫米,年平均气温9.5℃,一月份最冷，平均气温 6.8℃;7月份最热，平均气温23.5℃。全年日照时数平均2808小时。
资源：
太原矿藏堪称丰富，主要有铁、锰、铜、铝、铅、锌等金属矿和煤、硫磺、石膏、钒、硝石、耐火粘土、石英、石灰石、白云石、石美砂等非金属矿。太原处在“煤海”中部，地质上称太原的煤藏为“太原系煤”，储量居全省第七位，是山西煤炭资源的主要组成部分。太原系煤不仅储量丰富，而且煤种齐全，焦煤、肥煤、瘦煤、贫煤、气煤、无烟煤应有尽有。铁矿储量较为丰富，分布亦较广，主要类型为沉积变质型、接触交代(矽卡岩)型、沉积型，锰铁矿储量较少。非金属矿中石膏矿是太原第三矿产，石膏以其质地优良驰名中国。 
太原植物区系含有种子植物、蕨类植物、苔藓、地衣、藻类和菌类，具有植物资源丰富、植物起源古老、单种属植物较多等特点。太原地区野生动物资源，有鸟纲16目、37科、173种。其中，国家一级保护鸟类四种，国家二级保护鸟类27种、中日保护候鸟80种、山西省重点保护鸟类8种；哺乳纲6目、17科、42种。其中国家一级保护兽类一种、国家二级保护兽类5种、山西省重点保护兽类3种；爬行纲动物3目、4科、8种；两栖纲1目、2科、5种；鱼纲2目、4科、21种；甲壳纲动物1目、2科、2种；昆虫纲13目、70科、177种；蛛形纲2目、3科、10种。 </string>
    <string name="lcty_text_6">工业：太原是中国建国初期的重要工业基地之一。“一五”时期，太原为中国的经济建设作出了巨大贡献，当时与北京、天津同为华北地区“工业重镇”。20世纪末以来，在全省新型能源和工业基地建设中，太原坚持走新型工业化道路，承担起全省产业结构调整和升级转化“领头羊”的重任。以不锈钢生产基地、新型装备制造工业基地和镁铝合金加工制造基地“三大基地”为代表的优势产业发展态势良好。经过50多年的建设，已形成了以能源、冶金、机械、化工为支柱，纺织、轻工、医药、电子、食品、建材精密仪器等门类较齐全的工业体系，加之科研机构和大专院校集中及商业物资供应中心的优势，国民经济实现了快速、协调、健康发展。
农业：太原城郊型农村经济发展迅速，农业生产不断向高产、优质、高效方向转化。近年来，太原农业产业化经营取得突破，一批龙头企业不断发展壮大，新农村建设起步良好，农村经济呈现全面发展的良好态势。 2006年，全市农村经济总收入455亿元；乡镇企业总产值 73822亿元。“十一五”乃至更长的时期，太原要统筹城乡发展，扎实推进社会主义新农村建设，大力发展现代农业，特别是生态高效绿色农业，进一步优化农业布局，转变农业增长方式，提高农业产业化水平，努力构建以都市现代农业为基础、绿色工业为主导、特色城镇为支撑的农村经济发展新格局。</string>
    <string name="lcty_text_7">晋祠大米：产于太原晋祠镇一带，这种大米，颗粒长，个头大，外形晶莹饱满，呈半透明状，米色微褐，做出饭来颗粒分明，香气扑鼻。吃到嘴里，味香甜，有韧性、粘性，有咬头。晋祠大米所以质地优良，是由于水上关系。
清徐葡萄：产于太原清徐县境内。这里是国内著名的葡萄产区之一，素有“葡萄之乡”的美称。 清徐葡萄已有一千余年的栽培历史，葡萄产地主要分布在县城西北一带的山定。这里生产的葡萄品质优良、味美香甜、色泽鲜艳、含糖量高。唐朝诗人刘禹锡来并州曾写有葡萄歌，赞美清徐葡萄。
太原玉雕：太原玉雕历史悠久，雕刻工艺精致、细腻，所用原料石质精美，产品品种多样，它既是太原古老文化的象征，又是太原人民智慧的结晶。 
琉璃制品：太原盛产琉璃制品。早在盛唐，已经“碧瓦朱甍照城郭”。明清时，琉璃瓦已远销外省。太原马庄苏家制琉璃，据传始于盛唐，这些琉璃制品，装点了山西众多的古文物、古建筑，至今依然闪烁着光辉。
太原的面食最为有名，品种多，历史久，制作方法各异，浇头菜码考究。炒莜面、拉面、猫耳朵、搓鱼儿、莜面烤佬、红面糊糊、肉丝炒剔尖、刀削面、炒疙瘩等应有尽有，特色独具。</string>
    <string name="lcty_text_8">清和元“头脑”:
“头脑”是一种滋补食品，又名“八珍汤”，为太原特有的风味小吃，已有300年的历史，是清代学者、医学家傅山为孝敬其母所发明。在一碗汤糊里放上三大块肥羊肉，一块莲菜，一段长山药，汤里的作料有黄酒、酒糟和黄芪。品尝时可以感到酒、药和羊肉的混合香味，味美可口，越吃越香。具有益气调元、活血健胃和滋补的功效。 
认一力蒸饺 :
羊肉蒸饺是“认一力”的传统名吃。其特点为皮薄、馅嫩、味香，破皮一口水，咬开馅成丸，满嘴油香，油而不腻。羊肉馅内配有砂仁、豆蔻、白芷、荜拨、陈皮、良姜、肉桂、花椒等十多种中药材，具有增香、除膻、开胃、助消化之功能，所以蒸饺不仅吃起来不腻不柴，而且营养也很丰富。 
六味斋酱肉 :
六味斋酱肉店是中国老字号，已有百年历史，属太原的特色传统食品。其产品颇多，色香味俱佳。在众多的产品中，酱肘花独占鳌头。该产品呈酱红色，形态美观，素以肥而不腻，瘦而不柴，酥烂鲜香，闻之引人食欲，食之回味无穷而著称。 
鸡蛋醪糟 :
鸡蛋醪糟是太原的传统风味小吃之一。以江米为原料，大火蒸熟，冷水冲好，搓开米粒，按不同季节不同用量，放入醪糟曲搅拌均匀，入缸封口，发酵即成。食时先加水和白糖，待水烧开打进鸡蛋，黄白相间，酸甜清香，具有健胃、助消化、润肺、活血等医疗功能。</string>
    <string name="lcty_text_9">列出太原地图，方便用户查看。</string>
    <string name="lcty_text_10">太原近3天天气状况:</string>
    <string name="lcty_text_11">太原市 -民间文化。太原锣鼓：以堂鼓、铙、钹为主，最大特色是曲牌套路丰富，场面火爆激烈。表演时两队摆开阵势，互相对抗，恰似两军对垒，势必决一雌雄。表演形式分“单一二五”、 “双一二五”，曲牌有《五点子》、《七虎下山》、《十三排》、《唐王点兵》、《单刀赴会》等。　
太原莲花落： 莲花落是一种说唱兼有的曲艺形式，表演者多为一人自说自唱，自打“七件子”伴奏。所谓“七件子”，就是右手执两片大竹板，左手执五片小竹板。大竹板打板，小竹板打眼，相互配合，有板有眼。说唱词基本上是七言四句为一段，全用太原方言合辙入韵。
太原市 - 历史人物。
太原市作为中国北方的政治、经济、文化、军事重镇，华北区域中心城市，山西省的省会，具有2500多年的悠久历史，历史上人才精英辈出，其中比较著名的包括（以时间排序）： 廉颇，狄仁杰，王翰，王之涣，王昌龄，王维，白居易，米芾， 罗贯中，傅山，高君宇等。</string>
    <string name="wzty_1">太原旅游</string>
    <string name="wzty_2">晋祠</string>
    <string name="wzty_3">永祚寺双塔</string>
    <string name="wzty_4">太原汾河景区</string>
    <string name="wzty_5">迎泽公园</string>
    <string name="wzty_6">天龙山石窟</string>
    <string name="wzty_7">蒙山大佛</string>
    <string name="wzty_8">纯阳宫</string>
    <string name="wzty_9">更多好玩...</string>
    <string name="wzty_text_1">太原旅游资源丰富，较为著名的名胜古迹有晋祠、天龙山石窟、永祚寺、纯阳宫、崇善寺、窦大夫祠等国家级重点文物保护单位13处和省级重点文物保护单位32处。名山、石窟、寺院、庙宇、湖泊、森林、温泉、溶洞、峡谷、河流、古建筑、古遗址、名人故居、历史文化纪念地、博物馆等旅游资源的丰富以及高品质的文物的集中，在国内也是非常少有。其中晋祠圣母殿内宋塑侍女像栩栩如生，姿态各异，在海内外享有盛名。天龙山的北朝石窟及隋唐造像、崇善寺明代藏经、纯阳宫关羽立马铜像，在中国文学艺术史上均占有辉煌的一页。此外，唐太宗李世民撰写的“贞观宝翰”《晋祠铭并序》碑文，是现存最早的唯一完好的唐太宗行书碑。太山、天龙山、龙山、蒙山等名山见证了太原城2500多年的沧桑岁月。
　　太原市积淀了丰富的文化遗产，如称得上是华夏文化的一颗璀璨明珠的“晋祠”园林、建于明代的永祚寺、中国双塔建筑的杰出代表“凌霄双塔”、被专家传为世界之最的中国最大道教石窟龙山石窟。</string>
    <string name="wzty_text_2">在太原市西南25公里悬瓮山下晋水发源处。始建于北魏，为纪念周武王次子叔虞而建。1961年被国务院公布为全国重点文物保护单位。叔虞封唐，子燮因晋水更国号，后人因以命祠名。晋水主要源头由此流出，常年不息，水温17度，清澈见底。祠内贞观宝翰亭中有唐太宗撰写的御碑《晋祠之铭并序》。祠内还有著名的周柏、隋槐，周柏位于圣母殿左侧，隋槐在关帝庙内，老枝纵横，至今生机勃勃、郁郁苍苍，与长流不息的难老泉和精美的宋塑侍女像被誉为“晋祠三绝”。陈运和诗《晋祠》赞“唐太宗的行书石碑不老 宋代铸的铁狮雄风依然”。</string>
    <string name="wzty_text_3">在太原市东南郊郝庄村南。本名“永祚寺”。只因其寺内那两座”巍峨壮观的古塔，引人瞩目，才被世人习呼为双塔寺。明万历三十六年(1608年)高僧福登奉敕建造。现存寺内主要建筑，全为砖构。八角十三级，高54.7米。塔内有阶梯，可登顶层，凭窗远眺，太原风光历历在目。人们出入太原，双塔首先映入眼帘，成为太原的标志。寺内牡丹遍地，传为明代所植。</string>
    <string name="wzty_text_4">太原汾河景区，即汾河太原城区段治理美化工程，建于1998年10月，2000年9月首期工程完工并对外开放，总投资5.6亿元。景区北起胜利桥上游155米，南至南内环桥下游125米，全长6公里，宽500米，占地300公顷。设计为人工复式河槽,由中隔墙分成东西两渠，东侧为清水渠，宽220米,由四道橡胶坝分为三级蓄水湖面；西侧浑水渠，宽80米，排泄上游洪水和水库灌溉输水。东西两岸各布置一条箱形排污暗涵，接纳沿线城市排污管道和边山支沟来水，送至下游污水处理厂进行净化处理。
汾河景区从规划设计到施工建设积极贯彻了“以人为本”的理念,始终围绕“人-城市-生态-文化”的主题，把河道治理、环境保护、市绿化有机结合起来，进行环境综合整治，保持了城市滨区良好的自然生态，实现了人与自然的和谐共生、城市发展与环境建设的协调发展。</string>
    <string name="wzty_text_5">迎泽公园是太原市最大的综合性公园，位于迎泽大街中段，全园总面积70余公顷，其中迎泽湖约占三分之一。园内布局基本按地形划分，分为北湖景区、中部景区、南部景区和南湖景区。
位于公园中央的主景建筑藏经楼甚为壮观，各式桥、廊、亭、榭及棚架、雕塑等园林小品星罗棋布，掩映在碧树鲜花丛中，既可游览观赏，又可驻足小憩。园内建有花展馆、水族馆、书画展览馆、盆景园和牡丹、芍药、玫瑰等多种专类植物园，还建有网球场、微型高尔夫球场、游乐场等娱乐活动场馆。为市民休闲娱乐和文化体育活动提供了理想的去处。
迎泽公园，总面积666900平方米，迎泽湖水面占总面积的三分之一。迎泽湖，分成南、北、中三个部分。中湖东侧，长廊蜿蜒，长达150米的廊式木构建筑雕梁画栋，具有鲜明的民族风格。中湖南面，假山堆砌。假山脚下，水榭伸至湖心。迎泽湖上，桥梁横跨，游船点缀，颇有生气。
迎泽公园，凉亭极多，取名也很别致。北湖东岸有绣绮亭，菜花池畔有荷花亭，西门附近还有景亭，果园附近有玫瑰亭，与长廊相对的有六角亭，牡丹园里有牡丹亭、小茅亭、四角亭……曲径奇趣，优美多姿，引人入胜。
公园内，古建藏经楼颇为典雅。这是一座金代建筑，从别处迁移至此，给迎泽公园添了古朴的风采。
迎泽公园1993年进入市级文明单位行列，连续几年评为太原市模范集体。公园近年来先后成立了花艺店、花卉服务中心、绿化服务中心，为省城人民提供了绿化庭院、美化居室等服务。</string>
    <string name="wzty_text_6">在太原市西南40公里天龙山腰。四周山峦起伏，山头龙王石洞泉水荡漾。石窟分布在天龙山东西两峰，东峰8窟，西峰13窟。各窟的开凿年代不一，自东魏至唐，历魏、齐、隋、唐四个朝代。以唐代最多，达15窟。石雕体态生动，刀法洗炼，具有丰富的质感。宋代改名圣寿寺，寺宇已毁。寺前蟠龙古松苍翠蔽日。石窟分布在天龙山东西两峰的悬崖腰部，有东魏，北齐、隋、唐开凿的24个洞窟，东峰八窟，西峰十三窟，山北3窟。共存石窟造像1500余尊，浮雕、藻井、画像1144幅。各窟的开凿年代不一，以唐代最多，达十五窟。东魏石雕比例适度，形象写实、逼真，生活气息浓郁；唐代雕像则愈见严谨、洗炼、精湛。唐代石雕体态生动，姿势优美，刀法洗炼衣纹流畅，具有丰富的质感。第九窟“漫山阁”中的弥勒大佛坐像高约8米，比例和谐，容貌端庄凝重；下层观音立像，高约11米，形体丰满，璎珞富丽，纱罗透体，而普贤雕像，面带微笑，治然自得，是石雕中的精品。明人张冕《天龙寺》诗有“门对虬松欹偃石，殿围龙柏倒撑丘”句，即指此景。天龙山上，还有遍山松柏，尤以盘龙古松龙游神盘，纵横缠绕，为天龙山上又一奇观。 　　
天龙山石窟以其造型的娴熟、比例的适当、线条的柔和、雕刻的精细为后人研究佛教、美术、雕刻、建筑各方面提供了丰富的实物资料，为中国古代雕塑艺术的典范，在世界雕塑艺术史上占有极为重要的作用。坐太原到清徐的小巴，或者坐8路公交晋祠下车，然后绕道晋祠后面上天龙山，沿着盘山公路一直走即到。</string>
    <string name="wzty_text_7">蒙山大佛位于太原市西南约20千米处，系北齐高洋帝于天保二年（551年）开凿的高达63米的摩崖石刻大佛，也称西山大佛。它脚下埋着的寺院，曾是佛教净土宗早期道场。2006年开始修复工程，2008年5月重新向世人开放。蒙山大佛，又名西山大佛，位于山西省太原市西南20余公里处的蒙山。西山大佛坐落于蒙山北峰之阳，南向，依山凿制，由于年久风雨剥蚀，岩石表层风化严重，况其外露高大的胸颈部剥落之处还长出小树蒿草，失其原有的风采，致人们不知其为当年巍伟的大佛，立于大佛胸下怀间而不知，无怪以往探佛者慨叹“大佛已不存在了”，“仅遗乱石而已”。晋阳西山大佛现场外露胸颈部分，高17．5米，宽25米，颈部直径宽5米，唐代记载“高二百尺”，按唐普通尺计算约合今63米，仅低于我国四川乐山大佛（高71米）8米，比以往西方所说“世界第一大佛”阿富汗巴米扬大佛（Bamiyan，高53米）高10米，按凿制年代，西方对“巴”佛考查不清，认为“巴”佛凿于“三至七世纪”之间，这是个不精确的估计数字，而我晋阳西山大佛，史籍明确记载凿于北齐天保二年（551），时在六世纪。如按“巴”佛凿于“七世纪”来说，我晋阳西山大佛要早一个世纪。比我国乐山大佛凿于唐开元元年（713）早162年。按此，论高度，晋阳西山大佛是世界第二大佛，论年代则是世界最早的大型石刻佛像。</string>
    <string name="wzty_text_8">在太原市五一广场西北隅。又称吕祖庙。创建年代无考。明万历二十五年（1597年），晋藩王朱新扬对宫内重新规划，规模空前。清嘉庆年间（1796-1820年）增筑后院巍阁3层，景观宜人。该院整个建筑布局，类似八卦形式，为国内少见。纯阳宫是一座集庙宇、园林风格为一体的五进院落，院内亭台楼阁样样皆有。门前有四柱三楼木牌坊，其造型、色彩均独具特色，惹人注目。吕祖殿是纯阳宫的主殿，
 位于院落中央，面阔三间，方方正正，是宫内最壮观的建筑。殿后的那座院落建筑格局颇为独特，据说是按八卦的方位而建，具有鲜明的道教建筑特色，也是整个纯阳宫的精华所在。
纯阳宫的建筑占地不大,它以巧思入神的布局为世人称道。后面两院为楼阁式建筑,错落有致,曲折回旋,徜徉此间,大有“山重水复疑无路,柳暗花明又一村”之感。后院巍阁为观中最高建筑,登阁环眺,置身于琼楼玉宇之上,独具匠心的布局在宫观祠宇中实属少见。
纯阳宫主要建筑为：吕祖殿、方形单间回廊亭及巍阁。四围建配房和砖卷窑洞。前院亦楼阁式建筑，平面为方形抹角，四隅建八角攒尖亭，益增雅趣。解放后又增设假山，建关公亭及碑廊二十盈。
纯阳宫建筑群布局严谨，类型众多，洞石亭阁，殿楼相间，为道教建筑文化中别具特色的优秀范例。现辟为山西省艺术博物馆。
纯阳宫原来也是山西省博物馆所在地，后迁出。</string>
    <string name="wzty_text_9">太原旅游资源丰富，悠久的历史给太原留下了众多的名胜古迹，名山、石窟、寺院、庙宇、湖泊、森林、温泉、溶洞、峡谷、河流、古建筑、古遗址、名人故居、历史文化纪念地、博物馆等旅游资源的丰富以及高品质的文物的集中，在国内也是非常少有。太原其他的一些景点有崇善寺，北齐壁画，晋阳古城遗址，汾河景区，西山万亩生态园等。此外，唐太宗李世民撰写的“贞观宝翰”《晋祠铭并序》碑文，是现存最早的唯一完好的唐太宗行书碑。</string>
    <string name="xzty_1">太原教育</string>
    <string name="xzty_2">山西大学</string>
    <string name="xzty_3">太原理工大学</string>
    <string name="xzty_4">中北大学</string>
    <string name="xzty_5">山西医科大学</string>
</resources>